Agregado div contenedor

--- a/indexjava.html
+++ b/indexjava.html
@@ -6,6 +6,12 @@
     <title>GIT VScode</title>
 </head>
 <body>
+    <!-- div contenedor 1 -->
+    <div class=" container">
+        <div class=" row">
+            <p>practira de prueba</p>
+        </div>    
+    </div>
     
 </body>
 </html>
